--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "shoppy-globe",
   "version": "1.0.0",
   "type": "module",
-  "description": "This is a backend for ShoppyGlobe App created before.",
+  "description": " ",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Mayank M Jain",
-  "license": "ISC",
+  "author": "",
+  "license": " ",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
